Menu pulldown button behaves incorrectly on click if menu shadow width is set to 0 in theme prefs #41548

Closed
opened 2014-08-23 12:44:01 +02:00 by Hadrien Brissaud · 9 comments

System Information
Win7x64 GTX660M

Blender Version
Broken: 2.71

Short description of error
Menu pulldown button behaves incorrectly on click if menu shadow width is set to 0 in theme prefs.
If clicked in the highlighted area (glitch.PNG), the menu will open and close instantly.

**System Information** Win7x64 GTX660M **Blender Version** Broken: 2.71 **Short description of error** Menu pulldown button behaves incorrectly on click if menu shadow width is set to 0 in theme prefs. If clicked in the highlighted area (![glitch.PNG](https://archive.blender.org/developer/F106381/glitch.PNG)), the menu will open and close instantly.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @hadrien

Added subscriber: @hadrien

Added subscriber: @mont29

Added subscriber: @mont29

I cannot reproduce that with latest master, please try a build from our buildbot.

I cannot reproduce that with latest master, please try a build from [our buildbot](http://builder.blender.org/download).

It does the same on Windows build from yesterday (with factory settings). Menu shadow width has to be set to below 4. I can't pinpoint it better than that...

It does the same on Windows build from yesterday (with factory settings). Menu shadow width has to be set to below 4. I can't pinpoint it better than that...

Ah, my bad, I did not tried the right setting. Can confirm the issue on Linux as well.

Ah, my bad, I did not tried the right setting. Can confirm the issue on Linux as well.
Bastien Montagne self-assigned this 2014-08-24 09:09:47 +02:00

This issue was referenced by 7a026971dc

This issue was referenced by 7a026971dc3f9392278898cc28d7051f34e3dd6b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 7a026971dc.

Closed by commit 7a026971dc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41548
No description provided.